kubernetes/goexample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goexample
  labels:
    app: goexample
spec:
  selector:
    matchLabels:
      app: goexample
  template:
    metadata:
      labels:
        app: goexample
    spec:
      containers:
      - name: goexample
        image: goexample
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: goexample
