kubernetes/goexample-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: goexample
  labels:
    app: goexample
spec:
  selector:
    app: goexample
  ports:
  - port: 8080
  type: ClusterIP
