kubernetes/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: goexample-mongodb
spec:
  selector:
    app: goexample
    tier: mongodb
  ports:
  - port: 27017
  clusterIP: None
