kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: go-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: go-example.info

      http:
        paths:
          - path: "/"

            pathType: Prefix

            backend:
              service:
                name: goexample

                port:
                  number: 8080
